<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bolobeach</string>
    <string name="app_description">bolobeach</string>
    <string name="action_settings">Settings</string>
	<string name="save">save</string>
	<string name="random_save">随机并保存</string>
	<string name="keep">留存</string>
	<string name="imei">imei:</string>
	<string name="android_id">android id</string>
	<string name="wifi_mac">wifi mac</string>
	<string name="imsi_text">Imsi</string>
	
</resources>
